testdata/baselines/reference/submodule/conformance/untypedModuleImport_allowJs.errors.txt
/a.ts(1,17): error TS2307: Cannot find module 'foo' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import foo from "foo";
                    ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    foo.bar();
    
==== /node_modules/foo/index.js (0 errors) ====
    exports.default = { bar() { return 0; } }
    